--- a/.travis.yml
+++ b/.travis.yml
@@ -70,7 +70,7 @@ script:
       http_status=$(curl -s -I $1 $LANDING_PAGE | grep HTTP/1.1 | awk {'print $2'});
       echo "Done restarting $http_status";
     done;
-  - echo " #### When tests are ready enable this command here -> travis_retry npm test -- --verbose --colors ####"
+  - travis_retry npm test
   - docker ps -a;
   - sudo docker cp $GEPPETTO_CONTAINER:/opt/virgo/serviceability/logs/log.log /etc;
   - tail /etc/log.log -n 200
