Squashed commit of the following:
commit cf0eb93967a1537f2fdb8a043f37d6492ab7756e
Author: Zoran Sinnema <zsinnema@gmail.com>
Date:   Sun Jan 12 15:42:07 2020 -0500

    -

commit f097245bf03aad33c21734980e236d6a9ba9745c
Author: Zoran Sinnema <zsinnema@gmail.com>
Date:   Sun Jan 12 13:39:27 2020 -0500

    -

commit b128a930f0b46156d4f4560897b9821283182b8a
Author: Zoran Sinnema <zsinnema@gmail.com>
Date:   Sun Jan 12 13:34:59 2020 -0500

    -

commit ce815f548cdb1ac1ba479fd0fd782e9f870c7c48
Author: Zoran Sinnema <zsinnema@gmail.com>
Date:   Sun Jan 12 13:32:54 2020 -0500

    -

commit aa4c9f88b8d174ae8065497c207b0b56ec76ec78
Author: Zoran Sinnema <zsinnema@gmail.com>
Date:   Sun Jan 12 13:27:30 2020 -0500

    -

commit a4bdac0264b2b4d6e97d85ad87bb7ebf178aed8b
Author: Zoran Sinnema <zsinnema@gmail.com>
Date:   Sun Jan 12 12:44:29 2020 -0500

    fix: test_geppetto_server.sh to be used in travis

commit 50f0326f6fe9582528d41f133003df6f80e7c4fd
Author: Zoran Sinnema <zsinnema@gmail.com>
Date:   Sun Jan 12 12:22:14 2020 -0500

    fix: test_geppetto_server.sh to be used in travis

commit b8d144ef3800c878e748098035d2b428c9aed9fb
Author: Zoran Sinnema <zsinnema@gmail.com>
Date:   Sun Jan 12 11:51:43 2020 -0500

    fix: travis determine virgo host ip address

commit cc585046495c6d980cf8d575341ee9ef8c14df53
Author: Zoran Sinnema <zsinnema@gmail.com>
Date:   Sun Jan 12 11:25:48 2020 -0500

    fix: travis use copy.sh to clone scidash.git

commit e865ae5c5ca2bd8bc9cbfd22b6fb80faca9c8263
Author: Zoran Sinnema <zsinnema@gmail.com>
Date:   Sun Jan 12 11:08:32 2020 -0500

    fix: travis use copy.sh to clone scidash.git

commit dae396774e245082153bab4fbc64a8b888af98b1
Author: Zoran Sinnema <zsinnema@gmail.com>
Date:   Sun Jan 12 10:48:58 2020 -0500

    fix: travis use copy.sh to clone scidash.git

commit 870ae1a0563c65ca45c2d9268646e4d0bc1d8189
Author: Zoran Sinnema <zsinnema@gmail.com>
Date:   Sun Jan 12 10:27:43 2020 -0500

    fix: travis use copy.sh to clone scidash.git



--- a/.travis.yml
+++ b/.travis.yml
@@ -1,7 +1,7 @@
 language: node_js
 sudo: required
 node_js:
-  - "9"
+  - '9'
 env:
   global:
     - DOCKER_FOLDER: "$TRAVIS_BUILD_DIR/"
@@ -12,68 +12,73 @@ env:
     - GEPPETTO_CONTAINER: scidash_virgo
     - SCIDASH_CONTAINER: scidash
     - DEFAULT_BRANCH: geppetto-scidash
-    - LANDING_PAGE: "http://127.0.0.1:8000"
-    - COMMIT: ${TRAVIS_COMMIT::8}
+    - LANDING_PAGE: http://127.0.0.1:8000
+    - COMMIT: "${TRAVIS_COMMIT::8}"
 services:
   - docker
 before_install:
-  - export BUILD_TYPE=`if [ "$TRAVIS_BRANCH" == "vfb_geppetto_application" ]; then echo "development"; else echo "release"; fi`
-  - export VFB_REPO=$(echo ${TRAVIS_REPO_SLUG##*/} | awk '{gsub(/\-/,"_",$0);gsub(/\./,"_",$0);print toupper($0)}')
+  - export BUILD_TYPE=`if [ "$TRAVIS_BRANCH" == "vfb_geppetto_application" ]; then echo
+    "development"; else echo "release"; fi`
+  - export VFB_REPO=$(echo ${TRAVIS_REPO_SLUG##*/} | awk '{gsub(/\-/,"_",$0);gsub(/\./,"_",$0);print
+    toupper($0)}')
   - export REPO=$(echo ${TRAVIS_REPO_SLUG} | awk '{gsub(/\./,"_",$0);print tolower($0)}')
-  - export TAG=`if [ "$TRAVIS_BRANCH" == "master" ]; then echo "latest"; else echo ${TRAVIS_BRANCH/\//-}; fi`
-  - export TAG=`if [ "$BUILD_TYPE" == "development" ]; then echo "$TAG-development"; else echo "$TAG"; fi`
+  - export BRANCH=$(if [ "$TRAVIS_PULL_REQUEST" == "false" ]; then echo $TRAVIS_BRANCH;
+    else echo $TRAVIS_PULL_REQUEST_BRANCH; fi)
+  - export TAG=`if [ "$TRAVIS_BRANCH" == "master" ]; then echo "latest"; else echo ${BRANCH/\//-}; fi`
+  - echo $TRAVIS_BRANCH
+  - echo $BRANCH
+  - echo $TAG
+  - export PULL_TAG=`if [ "$TRAVIS_BRANCH" == "master" ]; then echo "latest"; else echo "development"; fi`
+  - export TAG=$TAG`if [ "$BUILD_TYPE" == "development" ]; then echo "-development";fi`
+  - echo $TAG
 install:
-  - npm install jest@24.8.0 puppeteer@1.17.0 jest-puppeteer@4.3.0 @babel/preset-env@7.4.5 url-join@4.0.0 @babel/core@7.4.5
-before_script:
-  - docker pull metacell/scidash_virgo:development || true
+  - npm install jest@24.8.0 puppeteer@1.17.0 jest-puppeteer@4.3.0 @babel/preset-env@7.4.5
+    url-join@4.0.0 @babel/core@7.4.5
+  - docker pull $GEPPETTO_IMAGE:$PULL_TAG
+  - docker tag $GEPPETTO_IMAGE:$PULL_TAG $GEPPETTO_IMAGE:$TAG
 script:
-  - echo -e "travis_fold:start:Docker_Build" || true
-  - export BRANCH=$(if [ "$TRAVIS_PULL_REQUEST" == "false" ]; then echo $TRAVIS_BRANCH; else echo $TRAVIS_PULL_REQUEST_BRANCH; fi)
-  - git clone -b $BRANCH https://github.com/Metacell/scidash.git || true
-  - echo -e "Building scidash database container" || true
-  - travis_retry docker build --build-arg targetBranch=$TRAVIS_BRANCH --build-arg originBranch=$BRANCH --build-arg defaultBranch=$DEFAULT_BRANCH -f ./scidash/service/docker/Dockerfile-postgres -t=$DB_IMAGE:$TAG $DOCKER_FOLDER || travis_terminate 1
+  - git clone https://github.com/ddelpiano/travis_utils
+  - travis_utils/copy.sh https://github.com/Metacell/scidash.git $TRAVIS_BRANCH $BRANCH $DEFAULT_BRANCH
+  - travis_fold start "building_scidash_database_container"
+  - travis_retry docker build --build-arg targetBranch=$TRAVIS_BRANCH
+    --build-arg originBranch=$BRANCH --build-arg defaultBranch=$DEFAULT_BRANCH -f ./scidash/service/docker/Dockerfile-postgres
+    -t=$DB_IMAGE:$TAG $DOCKER_FOLDER || travis_terminate 1
+  - travis_fold end "building_scidash_database_container"
   - sleep 5
-  - echo -e "Building geppetto virgo container" || true
-  - travis_retry docker build --build-arg targetBranch=$TRAVIS_BRANCH --build-arg originBranch=$BRANCH --build-arg defaultBranch=$DEFAULT_BRANCH -f ./scidash/service/docker/Dockerfile-virgo -t=$GEPPETTO_IMAGE:$TAG $DOCKER_FOLDER || travis_terminate 1
-  - sleep 5
-  - echo -e "Building scidash container" || true
-  - travis_retry docker build --build-arg targetBranch=$TRAVIS_BRANCH --build-arg originBranch=$BRANCH --build-arg defaultBranch=$DEFAULT_BRANCH -f ./scidash/service/docker/Dockerfile-scidash -t=$SCIDASH_IMAGE:$TAG $DOCKER_FOLDER || travis_terminate 1
+  - travis_fold start "building_scidash_container"
+  - travis_retry docker build --build-arg targetBranch=$TRAVIS_BRANCH
+    --build-arg originBranch=$BRANCH --build-arg defaultBranch=$DEFAULT_BRANCH -f ./scidash/service/docker/Dockerfile-scidash
+    -t=$SCIDASH_IMAGE:$TAG $DOCKER_FOLDER || travis_terminate 1
+  - travis_fold end "building_scidash_container"
   - sleep 5
   - echo -e "Starting scidash docker compose" || true
   - cd ./scidash/service/deployment || true
   - sed -i -e "s/latest/$TAG/g" docker-compose.yml
   - travis_retry docker-compose up -d || travis_terminate 1
   - cd -
-  - sleep 60;
-  - bash $TRAVIS_BUILD_DIR/utilities/tests/scripts/test_geppetto_server.sh
-  - echo -e "travis_fold:end:Startup_Server1" || true
+  - sleep 20
+  - travis_fold start "Startup_Server1"
+  - export VIRGO_HOST_IP=`docker inspect -f '{{range .NetworkSettings.Networks}}{{.IPAddress}}{{end}}' scidash_virgo`
+  - bash $TRAVIS_BUILD_DIR/utilities/tests/scripts/test_geppetto_server.sh $VIRGO_HOST_IP
+  - travis_fold end "Startup_Server1"
+  - travis_fold start "Docker_container_logs"
   - docker logs $SCIDASH_CONTAINER || true
   - docker logs $GEPPETTO_CONTAINER || true
   - docker logs $DB_CONTAINER || true
-  - sleep 60
-  - echo -e "travis_fold:start:Startup_Server2" || true
-  - bash $TRAVIS_BUILD_DIR/utilities/tests/scripts/test_geppetto_server.sh
-  - sleep 30
-  - echo -e "travis_fold:end:Startup_Server2" || true
+  - travis_fold end "Docker_container_logs"
+  - sleep 20
+  - travis_fold start "Startup_Server2"
+  - bash $TRAVIS_BUILD_DIR/utilities/tests/scripts/test_geppetto_server.sh $VIRGO_HOST_IP
+  - travis_fold end "Startup_Server2"
+  - sleep 10
   - http_status=$(curl -s -I $1 $LANDING_PAGE | grep HTTP/1.1 | awk {'print $2'})
   - echo "$http_status"
-  - while [ "$http_status" == "404" ]; do
-      echo "Restart run. Printing logs for debugging purposes";
-      sudo docker cp $GEPPETTO_CONTAINER:/opt/virgo/serviceability/logs/log.log /etc;
-      tail -n 200 /etc/log.log;
-      docker stop $(docker ps -a -q);
-      sleep 10;
-      docker rm $(docker ps -a -q);
-      sleep 10;
-      travis_retry docker-compose up -d;
-      bash $TRAVIS_BUILD_DIR/utilities/tests/scripts/test_geppetto_server.sh;
-      sleep 60;
-      http_status=$(curl -s -I $1 $LANDING_PAGE | grep HTTP/1.1 | awk {'print $2'});
-      echo "Done restarting $http_status";
-    done;
-  - echo " #### When tests are ready enable this command here -> travis_retry npm test -- --verbose --colors ####"
-  - docker ps -a;
+  - docker exec -ti $SCIDASH_CONTAINER /bin/bash -c "make run-tests"
+  - echo "When tests are ready enable this command here -> travis_retry npm test --
+    --verbose --colors"
   - sudo docker cp $GEPPETTO_CONTAINER:/opt/virgo/serviceability/logs/log.log /etc;
+  - travis_fold start "Geppetto_container_log"
   - tail /etc/log.log -n 200
+  - travis_fold end "Geppetto_container_log"
   - docker stop $(docker ps -a -q)
   - docker rm $(docker ps -a -q)
