--- a/package.json
+++ b/package.json
@@ -24,6 +24,8 @@
     "@babel/preset-env": "^7.4.5",
     "@babel/preset-react": "^7.0.0",
     "@geppettoengine/geppetto-client": "file:geppetto-client",
+    "@material-ui/icons": "^4.5.1",
+    "@material-ui/lab": "^4.0.0-alpha.40",
     "babel-loader": "^8.0.6",
     "babel-polyfill": "^6.26.0",
     "connected-react-router": "^6.6.0",
@@ -39,6 +41,8 @@
     "mini-css-extract-plugin": "^0.7.0",
     "puppeteer": "^1.17.0",
     "react-redux": "^7.0.3",
+    "react-tap-event-plugin": "^3.0.3",
+    "redux-logger": "^3.0.6",
     "style-loader": "^0.13.2",
     "url-join": "^4.0.0",
     "url-loader": "^0.5.8",
