--- a/.travis.yml
+++ b/.travis.yml
@@ -32,7 +32,6 @@ install:
   - docker pull $GEPPETTO_IMAGE:$PULL_TAG
   - docker tag $GEPPETTO_IMAGE:$PULL_TAG $GEPPETTO_IMAGE:$TAG
 script:
-  - jest --verbose
   - git clone https://github.com/ddelpiano/travis_utils
   - travis_utils/copy.sh https://github.com/Metacell/scidash.git $TRAVIS_BRANCH $BRANCH $DEFAULT_BRANCH
   - travis_fold start "building_scidash_database_container"
@@ -70,7 +69,7 @@ script:
   - http_status=$(curl -s -I $1 $LANDING_PAGE | grep HTTP/1.1 | awk {'print $2'})
   - echo "$http_status"
   - docker exec -ti $SCIDASH_CONTAINER /bin/bash -c "make run-tests"
-  - travis_retry npm test -- --runInBand
+  - travis_wait 30 docker exec -ti $SCIDASH_CONTAINER /bin/bash -c "cd static/org.geppetto.frontend/src/main/webapp/; npm test -- --runInBand"
   - sudo docker cp $GEPPETTO_CONTAINER:/opt/virgo/serviceability/logs/log.log /etc;
   - travis_fold start "Geppetto_container_log"
   - tail /etc/log.log -n 200
