--- a/package.json
+++ b/package.json
@@ -25,11 +25,12 @@
     "@babel/preset-react": "^7.0.0",
     "@babel/runtime": "^7.8.3",
     "@geppettoengine/geppetto-client": "file:geppetto-client",
+    "@material-ui/core": "^4.5.1",
     "@material-ui/icons": "^4.5.1",
     "@material-ui/lab": "^4.0.0-alpha.40",
     "babel-loader": "^8.0.6",
     "babel-polyfill": "^6.26.0",
-    "connected-react-router": "^6.6.0",
+    "connected-react-router": "^6.6.1",
     "copy-webpack-plugin": "^4.6.0",
     "css-loader": "^3.0.0",
     "exports-loader": "^0.6.3",
@@ -41,7 +42,7 @@
     "less-loader": "^5.0.0",
     "mini-css-extract-plugin": "^0.7.0",
     "puppeteer": "^1.17.0",
-    "react-redux": "^7.0.3",
+    "react-redux": "^7.1.3",
     "redux-logger": "^3.0.6",
     "style-loader": "^0.13.2",
     "url-join": "^4.0.0",
@@ -54,8 +55,8 @@
     "@babel/preset-stage-2": "^7.0.0",
     "@types/jasmine": "^2.8.8",
     "@types/material-ui": "^0.21.5",
-    "@types/react": "^16.4.9",
-    "@types/react-dom": "^16.0.7",
+    "@types/react": "^16.9.5",
+    "@types/react-dom": "^16.9.5",
     "awesome-typescript-loader": "^3.5.0",
     "babel-eslint": "^10.0.1",
     "babel-plugin-transform-decorators-legacy": "^1.3.5",
