--- a/package.json
+++ b/package.json
@@ -44,6 +44,7 @@
     "puppeteer": "^1.17.0",
     "react-redux": "^7.1.3",
     "redux-logger": "^3.0.6",
+    "@sentry/browser": "^5.11.2",
     "style-loader": "^0.13.2",
     "url-join": "^4.0.0",
     "url-loader": "^0.5.8",
