--- a/GeppettoConfiguration.json
+++ b/GeppettoConfiguration.json
@@ -1,7 +1,7 @@
 {
-  "_README" : "http://docs.geppetto.org/en/latest/build.html",
+  "_README" : "https://docs.geppetto.org/en/latest/build.html",
   "contextPath": "/org.geppetto.frontend/",
-  "useSsl": false,
+  "useSsl": true,
   "embedded": false,
   "embedderURL": ["/"],
   "rootRedirect":"",
@@ -12,8 +12,8 @@
     "title": "SciDash",
     "description": "SciDash is a project that enables the reproducible execution and visualization of data-driven unit test (SciUnit) for assessing model quality.",
     "type": "website",
-    "url": "http://scidash.github.io/",
-    "icon": "http://scidash.github.io/assets/icons/favicon-32x32.png",
-    "image": "http://scidash.github.io/assets/scidash-text.png"
+    "url": "https://scidash.github.io/",
+    "icon": "https://scidash.github.io/assets/icons/favicon-32x32.png",
+    "image": "https://scidash.github.io/assets/scidash-text.png"
   }
 }
